Search plugin: Fix updating of comboboxes on search and replace

Thanks for the patch I committed it wit slight changes :)

BUG: 313000
(cherry picked from commit eceecef2eb736bdee17563f88814cb865bdd2024)